<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.RegistrationPage"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/new_background">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:id="@+id/Reg_UserName"
        android:hint="@string/RegUsernamehint"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:id="@+id/Reg_SName"
        android:hint="@string/RegNamehint"/>
    <EditText

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DOB"
        android:layout_marginBottom="15sp"
        android:hint="@string/RegDOBhint"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:id="@+id/Reg_SMajor"
        android:hint="@string/RegMajorhint"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:inputType="textWebEmailAddress"
        android:id="@+id/Reg_Email"
        android:hint="@string/RegEmailHint"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:id="@+id/Reg_pass1"
        android:hint="@string/RegPassHint"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:id="@+id/Reg_pass2"
        android:hint="@string/RegConfirmHint" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Reg"
        android:text="@string/RegBtn"
        android:backgroundTint="#0FFF"
        />

</LinearLayout>

    <FrameLayout
        android:id="@+id/reg_fragment1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

</LinearLayout>
