<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.MA_Fragment2">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/UsernameMA"
            android:id="@+id/text_name_MA_1"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hintuser"
            android:ems="10"
            android:id="@+id/editText_name_MA1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PasswordMA"
            android:id="@+id/text_name_MA_2"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hintpass"
            android:ems="10"
            android:id="@+id/editText_name_MA2"
            />
    </TableLayout>

</FrameLayout>
