<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/new_background"
    tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.MainActivity">


    <ImageView
        android:layout_width="177dp"
        android:layout_height="177dp"
        android:background="@mipmap/ic_launcher"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Welcome"
        android:id="@+id/textView"
        android:typeface="monospace"
        android:fontFamily="@string/abc_capital_on"
        android:textColor="#FFFFFF" />
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/UsernameMA"
            android:id="@+id/text_name_MA_1"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hintuser"
            android:ems="10"
            android:id="@+id/editText_name_MA1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/PasswordMA"
            android:id="@+id/text_name_MA_2"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hintpass"
            android:ems="10"
            android:id="@+id/editText_name_MA2"
            />
    </TableLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/loginMA"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="10dp"
            android:backgroundTint="#0FFF"
            android:text="Login"/>



    </LinearLayout>
    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/ForgotPassMA"
            android:id="@+id/btn_forgetpassword_MA"
            android:backgroundTint="#0FFF"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/RegisterMA"
            android:textSize="10dp"
            android:id="@+id/btn_register_MA"
            android:backgroundTint="#0FFF"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ma_fragment1"
        android:visibility="gone"/>

</LinearLayout>
