<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.montclair.mobilecomputing.m_alrajab.assignment_1.ForgetPassword">
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
        android:text="@string/Name"/>
    <EditText
       android:id="@+id/ForgetuserName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"/>
    <EditText
       android:id="@+id/ForgetEmail"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>
     <Button
       android:text="@string/GetEmail"
       android:id="@+id/ForgetButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
</LinearLayout>
